<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
      
    <modelVersion>4.0.0</modelVersion>
      
    <groupId>net.clementlevallois.io</groupId>
    <artifactId>parentbuild</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <name>io parent build</name>
      
                  
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <gephi.toolkit.version>0.10.1</gephi.toolkit.version>
        <netbeans.version>RELEASE140</netbeans.version>
        <webmagic.version>0.10.13</webmagic.version>
    </properties>
      
    <modules>
        <module>io_txt</module>
        <module>io_csv</module>
        <module>io_xlsx</module>
        <module>io_model</module>
        <module>NocodeImportWebServices</module>
        <module>io_json</module>
        <module>io_pdf</module>
        <module>io_html</module>
        <module>io_gexf</module>
    </modules>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.17.2</version>
            </dependency>
            <dependency>
                <groupId>us.codecraft</groupId>
                <artifactId>webmagic-core</artifactId>
                <version>0.10.3</version>
            </dependency>
            <dependency>
                <groupId>us.codecraft</groupId>
                <artifactId>webmagic-extension</artifactId>
                <version>0.10.3</version>
            </dependency>            
            <dependency>
                <groupId>com.univocity</groupId>
                <artifactId>univocity-parsers</artifactId>
                <version>2.9.1</version>
            </dependency>
            <dependency>
                <groupId>com.sigpwned</groupId>
                <artifactId>chardet4j</artifactId>
                <version>74.2.1</version>
            </dependency>
            <dependency>
                <groupId>net.clementlevallois.functions</groupId>
                <artifactId>umigon-model</artifactId>
                <version>0.15</version>
            </dependency>
            <dependency>
                <groupId>net.clementlevallois.functions</groupId>
                <artifactId>umigon-model-classification</artifactId>
                <version>0.10</version>
            </dependency>
            <dependency>
                <groupId>net.clementlevallois.utils</groupId>
                <artifactId>utils-core</artifactId>
                <version>0.13</version>
            </dependency>
            <dependency>
                <groupId>jakarta.json</groupId>
                <artifactId>jakarta.json-api</artifactId>
                <version>2.1.3</version>
                <type>jar</type>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
            <dependency>
                <groupId>org.eclipse.parsson</groupId>
                <artifactId>parsson</artifactId>
                <version>1.1.5</version>
            </dependency>
            <dependency>
                <groupId>jakarta.json.bind</groupId>
                <artifactId>jakarta.json.bind-api</artifactId>
                <version>2.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse</groupId>
                <artifactId>yasson</artifactId>
                <scope>runtime</scope>
                <version>3.0.3</version>
            </dependency>
            <!--for tests-->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.10.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.24.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>4.11.0</version>
                <scope>test</scope>
            </dependency>
            <!--GEPHI-->
           
            <dependency>
                <groupId>org.gephi</groupId>
                <artifactId>gephi-toolkit</artifactId>
                <version>${gephi.toolkit.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
      
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <id>compile</id>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <disableXmlReport>true</disableXmlReport>
                        <useFile>false</useFile>
                    </configuration>
                </plugin>
                <!-- plug-in configuration to put into your parent POM for avoiding any usages of outdated log4j2 versions,
                some of which are subject to the RCE CVE-2021-44228 ("Log4Shell") -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <id>ban-bad-log4j-versions</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <bannedDependencies>
                                        <excludes>
                                            <exclude>org.apache.logging.log4j:log4j-core:(,2.15.0)</exclude>
                                        </excludes>
                                    </bannedDependencies>
                                </rules>
                                <fail>true</fail>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
